--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
   
 <body>
   <h1>
-Hello there, awesome person!
+<img src="https://avatars3.githubusercontent.com/u/54286051?v=4">
+
   </h1>
   </body>
 </html>
