--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <img src="https://avatars3.githubusercontent.com/u/54286051?v=4">
     <h3> My top 3 favoreite sites:</h3>
 <ol>
-  <li>Facebook</li>
+      <li>My favorite site is <a href="https://github.com">GitHub</a>!</li>
   <li>Tumblr</li>
   <li>W3 Schools</li>
     </ol>
